--- a/configs/database.yml
+++ b/configs/database.yml
@@ -1,7 +1,19 @@
-development:
+default: &default
   adapter: mysql2
-  database: maimai_blog_checker
-  host: localhost
-  username: root
-  password: ""
   encoding: utf8
+  pool: 5
+  username: root
+  password: <%= ENV['DB_PASSWORD'] %>
+  socket: <%= ENV['DB_SOCKET'] %>
+
+development:
+  <<: *default
+  database: maimai_blogchecker_development
+
+test:
+  <<: *default
+  database: maimai_blogchecker_test
+
+production:
+  <<: *default
+  database: maimai_blogchecker_production
