--- a/configs/database.yml
+++ b/configs/database.yml
@@ -8,12 +8,8 @@ default: &default
 
 development:
   <<: *default
-  database: maimai_blogchecker_development
-
-test:
-  <<: *default
-  database: maimai_blogchecker_test
+  database: maimai_blogchecker
 
 production:
   <<: *default
-  database: maimai_blogchecker_production
+  database: maimai_blogchecker
